Add repairman get endpoints
