# src/main/resources/api/api.yaml
@@ -13,6 +13,38 @@ tags:
 
 paths:
   /repairmen:
+    get:
+      summary: Get all repairmen
+      operationId: getRepairmen
+      tags:
+        - repairmen
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+            minimum: 0
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 20
+            minimum: 1
+            maximum: 100
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/RepairmanDto"
     post:
       summary: Create a new repairman
       operationId: createRepairman
@@ -31,6 +63,24 @@ paths:
               schema:
                 $ref: "#/components/schemas/RepairmanDto"
   /repairmen/{id}:
+    get:
+      summary: Get repairman by ID
+      operationId: getRepairmanById
+      tags:
+        - repairmen
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/repairmanId"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RepairmanDto"
     put:
       summary: Update a repairman
       operationId: updateRepairman
